--- a/css/styleurunler.css
+++ b/css/styleurunler.css
@@ -1,3 +1,23 @@
 .cardMenuTitleandMenu {
     margin-top: 20px;
 }
+@media (max-width: 1024px) {
+    .cardMenuTitleandMenu {
+        margin-top: 15px;
+        text-align: center;
+    }
+}
+
+@media (max-width: 768px) {
+    .cardMenuTitleandMenu {
+        margin-top: 10px;
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 480px) {
+    .cardMenuTitleandMenu {
+        margin-top: 5px;
+        font-size: 16px;
+    }
+}
